Make Scala.js version configurable.
Add .gitignore file.

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,5 @@
 name=scalajs
-description=My Scala.js project
+description=A Scala.js project with Vite
 package=com.example.scalajs
-scala_version=3.4.0
+scala_version=3.4.1
+scalajs_version=1.16.0
